@@ -5,26 +5,24 @@ import com.rating_backend.user.model.Hotel;
 import com.rating_backend.user.model.Rating;
 import com.rating_backend.user.model.Users;
 import com.rating_backend.user.repository.UserRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.rating_backend.user.utils.HotelFeign;
+import com.rating_backend.user.utils.RatingFeign;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
-
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
 
-    private Logger logger = LoggerFactory.getLogger(UserServiceImpl.class);
     @Autowired
     UserRepository userRepository;
 
     @Autowired
-    private RestTemplate restTemplate;
+    RatingFeign ratingFeign;
+
+    @Autowired
+    HotelFeign hotelFeign;
 
     @Override
     public List<Users> createBulkUsers(List<Users> users) {
@@ -44,17 +42,13 @@ public class UserServiceImpl implements UserService {
     @Override
     public Users getUserById(int id) {
         Users user = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException());
-        Rating[] ratingArray = restTemplate.getForObject("http://RATING/ratings/users/"+user.getId(), Rating[].class);
-        logger.info("{} ", ratingArray);
-
-        List<Rating> ratingList = Arrays.stream(ratingArray).map(rating -> {
-
-            ResponseEntity<Hotel> hotelEntity = restTemplate.getForEntity("http://HOTEL/hotels/get/"+rating.getHotelId(), Hotel.class);
-            Hotel hotel = hotelEntity.getBody();
-            rating.setHotel(hotel);
+        ResponseEntity<List<Rating>> ratingList = ratingFeign.getRatingsById(user.getId());
+        List<Rating> ratingList1 = ratingList.getBody().stream().map(rating -> {
+            ResponseEntity<Hotel> hotel = hotelFeign.getHotelById(rating.getHotelId());
+            rating.setHotel(hotel.getBody());
             return rating;
-        }).collect(Collectors.toList());
-        user.setRatings(ratingList);
+        }).toList();
+        user.setRatings(ratingList1);
         return user;
     }
 
